Fix loading spinners, now have to specify the size of the spinner in the class name

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
 
         <style type="text/css">
         body { background-image: url("{{ STATIC_URL }}images/bedge_grunge.png"); }
-        .loading-spinner { background: rgba(255,255,255,0.5) url('{{ STATIC_URL }}images/ajax-loader.gif') no-repeat center center; }
+        .loading-spinner-16 { background: rgba(255,255,255,0.5) url('{{ STATIC_URL }}images/ajax-loader-16.gif') no-repeat center center; }
+        .loading-spinner-24 { background: rgba(255,255,255,0.5) url('{{ STATIC_URL }}images/ajax-loader-24.gif') no-repeat center center; }
+        .loading-spinner-32 { background: rgba(255,255,255,0.5) url('{{ STATIC_URL }}images/ajax-loader-32.gif') no-repeat center center; }
+        .loading-spinner-48 { background: rgba(255,255,255,0.5) url('{{ STATIC_URL }}images/ajax-loader-48.gif') no-repeat center center; }
         </style>
 
         {% block head %}
