--- a/templates/group_create_modal.html
+++ b/templates/group_create_modal.html
@@ -24,6 +24,6 @@
 			<a href="#" class="btn dismiss" data-dismiss="modal" aria-hidden="true">Cancel</a>
 			<input type="submit" id="create-group-btn" class="btn btn-primary" value="Create" />
 		</div>
-        <div class="loading-spinner hide"></div>
+        <div class="loading-spinner loading-spinner-32 hide"></div>
 	</form>
 </div>
