--- a/templates/group_invite_modal.html
+++ b/templates/group_invite_modal.html
@@ -17,6 +17,6 @@
             <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</a>
             <input type="submit" id="invite-people-btn" class="btn btn-primary" value="Invite" />
         </div>
-        <div class="loading-spinner hide"></div>
+        <div class="loading-spinner loading-spinner-32 hide"></div>
     </form>
 </div>
