--- a/templates/group_post.html
+++ b/templates/group_post.html
@@ -49,7 +49,7 @@
                     <input type="hidden" name="id_post" value="{{ post.pk }}" />
                     <input type="submit" value="Comment" class="btn pull-left btn-primary hide pull-right" />
                 </form>
-                <div class="loading-spinner hide"></div>
+                <div class="loading-spinner loading-spinner-16 hide"></div>
             </div>
         </ul>
     </div>
