--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -9,7 +9,7 @@
 	<textarea class="input-block-level pull-left" placeholder="Communicate with your group..." id="id_message" rows="10" cols="40" name="message"></textarea>
 	<input type="submit" value="Post" class="btn pull-right btn-primary" />
     {% csrf_token %}
-    <div class="loading-spinner hide"></div>	
+    <div class="loading-spinner loading-spinner-32 hide"></div>
 </form>
 
 {% if post_list %}
