--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -32,7 +32,7 @@
                                 {% csrf_token %}
                                 {{ form }}
                                 <input id="register-btn" class="btn btn-large btn-primary pull-left" type="submit" value="Register" />
-                                <div class="loading-spinner hide"></div>
+                                <div class="loading-spinner loading-spinner-48 hide"></div>
                             </form>
                         </div>
                     </div>
