--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
             {{ form }}
             <input id="register-btn" class="btn btn-large btn-primary pull-left" type="submit" value="Register" />
             <a href="/" class="back-btn btn btn-large pull-right">Home</a>
-            <div class="loading-spinner hide"></div>
+            <div class="loading-spinner loading-spinner-48 hide"></div>
         </form>
     </div>
 </div>
