--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #f5f5f5;
+    overflow-y: scroll;
 }
 
 #content .btn {
@@ -272,11 +273,6 @@ abbr {
 
 .comment-form-container {
 	border-width: 0;
-}
-
-.comment-form-container .loading-spinner {
-	height: 75%;
-	width: 75%;
 }
 
 .comments > .comment:nth-child(odd), .show_comments {
