--- a/templates/group_post.html
+++ b/templates/group_post.html
@@ -16,6 +16,7 @@
         </span>
         <div class="post-message">{{ post.message }}</div>
         <ul class="media-list comments">
+            <div class='triangle-border'></div>
             <div class='triangle 
             {% if post.comment_set.all|length > 7 %}
                 dark
