--- a/static_resources/css/custom.css
+++ b/static_resources/css/custom.css
@@ -30,10 +30,10 @@
 }
 
 .post {
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 .span10 {
-    margin-left: 0px;
+    margin-left: 0;
     margin-right: 20px;
 }
