Sidebar brought to foreground, member list moves around with group.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -240,8 +240,10 @@ abbr {
 	border-style: solid;
 }
 
-.members {
+.invite-users {
 	text-align: center;
+	display: block;
+	padding-top: 3px;
 }
 
 .member-avatar {
