--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -28,10 +28,10 @@
 {% block content %}
 <div id="top" class="row-fluid">
 	<div class="container-narrow">
-		<div class="span3">
+		<div id='left-column' class="span3 well">
 			<div class="well">
 				{% block nav %}
-				<ul id="team-nav" class="nav nav-list">
+				<ul class="team-nav nav nav-list top">
 				    <li {% if not group %} class="active" {% endif %} ><a href="/"><i class="icon-inbox"></i> Inbox</a></li>
 				    <li class="nav-header">Groups</li>
 				    {% for member in user.membership_set.all %}
@@ -42,9 +42,11 @@
 				    </li>
 					{% ifequal group.pk member.group.id %}
 						{% if group %}
+						</ui>
+						</div>
+							
 						<div>
 							<ul class="nav nav-list members clearfix">
-								<li class="divider"></li>
 								<li class="nav-header">Group Members</li>
 								{% for member in group.members.all %}
 								<li>
@@ -65,8 +67,28 @@
 						<div>
 							<a href="#invite-people" class='invite-users' data-toggle="modal"><i class="icon-user"></i> Invite To Group</a>
 						</div>
+						{% if is_admin %}
+						<ul class="nav nav-list">
+							<li class="nav-header">Active Invites</li>
+							{% if invites %}
+								{% for invite in invites %}
+									{% if invite.acceptance == 'P' %}
+									<li style="font-size: .7em;">{{ invite.recipient_email }} (Pending)
+									{% elif invite.acceptance == 'A' %}
+									<li style="font-size: .7em; color: green;">{{ invite.recipient_email }} (Accepted)
+									{% else %}
+									<li style="font-size: .7em; color: red;">{{ invite.recipient_email }} (Rejected)
+									{% endif %}
+								<i class="remove-btn remove-invite icon-remove"></i></li>
+								{% endfor %}
+							{% else %}
+							<li>No invites pending</li>
+							{% endif %}
+						</ul>
+						{% endif %}
+					<div class='well'>
+						<ul class="team-nav nav nav-list bottom">
 					{% endif %}
-					<hr />
 					{% endif %}
 				{% endifequal %}
 					
@@ -93,28 +115,7 @@
                     .btn {
                         margin-top: .5em;
                     }
-                </style>
-
-                {% if is_admin %}
-                <ul class="nav nav-list">
-                    <li class="divider"></li>
-                    <li class="nav-header">Active Invites</li>
-                    {% if invites %}
-                        {% for invite in invites %}
-                            {% if invite.acceptance == 'P' %}
-                            <li style="font-size: .7em;">{{ invite.recipient_email }} (Pending)
-                            {% elif invite.acceptance == 'A' %}
-                            <li style="font-size: .7em; color: green;">{{ invite.recipient_email }} (Accepted)
-                            {% else %}
-                            <li style="font-size: .7em; color: red;">{{ invite.recipient_email }} (Rejected)
-                            {% endif %}
-                        <i class="remove-btn remove-invite icon-remove"></i></li>
-                        {% endfor %}
-                    {% else %}
-                    <li>No invites pending</li>
-                    {% endif %}
-                </ul>
-                {% endif %}
+				</style>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 				{% endblock nav %}
 			</div>
