--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -179,7 +179,7 @@ abbr {
 .comments .name, .comments em {
 	margin-left: 5px;
 	font-size: 13px;
-	color: #777;
+	color: #AAA;
 	font-weight: normal;
 	line-height: 17px;
 }
@@ -251,16 +251,43 @@ abbr {
 }
 
 .invite-users {
-	text-align: center;
 	display: block;
 	padding-top: 3px;
+	text-align: center;
 }
 
-
+#invites  > li {
+	font-size: .9em;
+}
 
 .member-avatar {
 	margin: 2px;
 }
+
+.member-avatar.pending {
+	border: 1px solid black;
+}
+
+.member-avatar.accepted {
+	border: 1px solid green;
+}
+
+.member-avatar.rejected {
+	border: 1px solid red;
+}
+
+.remove-btn {
+	margin-left: -17px;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+}
+
+
+#invites li {
+	position: relative;
+}
+
 
 .triangle {
 	margin-top: -9px!important;
