Added notifications and a test to see if notifications show up.

--- a/templates/inbox_notification.html
+++ b/templates/inbox_notification.html
@@ -1,6 +1,6 @@
 {% load gravatar %}
 {% for notification in notifications %}
-
-
-
+<li>
+    <em>notification.date_created</em>
+</li>
 {% endfor%}
