--- a/templates/inbox_notification.html
+++ b/templates/inbox_notification.html
@@ -1,6 +1,7 @@
 {% load gravatar %}
 {% for notification in notifications %}
 <li>
-    <em>notification.date_created</em>
+<em>Notification type {{ notification.type_ }} for:{{ notification.user.first_name }}</em><br />
+<em>"{{ notification.content.message }}"</em>
 </li>
 {% endfor%}
