--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -50,7 +50,7 @@
 								<li class="nav-header">Group Members</li>
 								{% for member in group.members.all %}
 								<li>
-									<abbr class='' title="{{ member.get_full_name }}">
+									<abbr class="" title="{{ member.get_full_name }}">
 										<img memid="{{ member.pk }}" class="member-avatar pull-left clear-fix" src="{{ member.email|gravatar:'42' }}" alt="member's gravatar" /></abbr>
 									<!--<div class="member-name" memid="{{ member.pk }}">
 										<img class="pull-left clear-fix" src="{{ member.email|gravatar:'30' }}" alt="member's gravatar" />
@@ -72,16 +72,16 @@
 								{% for invite in invites %}
 									<li>
 									{% if invite.acceptance == 'P' %}
-										<abbr class='' title="(Pending) {{ invite.recipient_email }}">
+										<abbr class="" title="(Pending) {{ invite.recipient_email }}">
 										<img memid="{{ invite.pk }}" class="member-avatar pull-left clear-fix pending" src="{{ invite.recipient_email|gravatar:'40' }}" alt="member's gravatar" />
 										<i class="remove-btn remove-invite icon-remove"></i>
 										</abbr>
 									{% elif invite.acceptance == 'A' %}
-									<abbr class='' title="(Accepted) {{ invite.recipient_email }}">
+									<abbr class="" title="(Accepted) {{ invite.recipient_email }}">
 										<img memid="{{ invite.pk }}" class="member-avatar pull-left clear-fix pending" src="{{ invite.recipient_email|gravatar:'40' }}" alt="member's gravatar" />
 									<i class="remove-btn remove-invite icon-remove"></i></abbr>
 									{% else %}
-									<abbr class='' title="(Rejected) {{ invite.recipient_email }}">
+									<abbr class="" title="(Rejected) {{ invite.recipient_email }}">
 										<img memid="{{ invite.pk }}" class="member-avatar pull-left clear-fix pending" src="{{ invite.recipient_email|gravatar:'40' }}" alt="member's gravatar" />
 									<i class="remove-btn remove-invite icon-remove"></i></abbr>
 									{% endif %}
@@ -89,9 +89,9 @@
 								{% endfor %}
 							{% endif %}
 						</ul>
-						<a href="#invite-people" class='invite-users clearfix' data-toggle="modal"><i class="icon-user"></i> Invite More People</a>
+						<a href="#invite-people" class="invite-users clearfix" data-toggle="modal"><i class="icon-user"></i> Invite More People</a>
 						{% endif %}
-					<div class='well'>
+					<div class="well">
 						<ul class="team-nav nav nav-list bottom">
 					{% endif %}
 				{% endifequal %}
@@ -132,7 +132,7 @@
 					{% endblock maincontent %}
 				</div>
 			</div>
-			<div id="footer" class='pull-right'>Whitespace</div>
+			<div id="footer" class="pull-right">Whitespace</div>
 		</div>
 	</div>
 </div>
