--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -2,7 +2,6 @@
 
 {% block maincontent %}
 <div class="well" style="text-align: center">
-	<h1>inbox</h1>
-	<p><em>coming soon</em></p>
+    <p><em>No updates available</em></p>
 </div>
 {% endblock maincontent %}
