Removed the grid gutter properly

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>{% block title %}Bulletin{% endblock title %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+
         <!-- Bootstrap -->
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-responsive.no-icons.min.css" rel="stylesheet" />
