--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -98,6 +98,7 @@ abbr {
 
 #left-column {
 	border-width: 0;
+    margin-bottom: 0;
 	padding: 0;
     background-color: rgba(255,255,255,0.6);
 	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
@@ -464,4 +465,3 @@ ul.errorlist {
     max-width: 800px;
     margin: 0 auto;
 }
-
