--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 {% if form %}
 <div id="accordion" class="well span8 offset2">
     <div id="register-form-container">
-        <form id="register-form" action="/register/" class="form-signin loading-spinner-container clearfix" method="post">
+        <form id="register-form" action="{{ action }}" class="form-signin loading-spinner-container clearfix" method="post">
             {% csrf_token %}
             <h2 class="form-signin-heading">Register your account</h2>
             {{ form }}
