Static position of the group members area.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -353,6 +353,10 @@ abbr {
    background-color: rgb(235, 235, 235);
 }
 
+.show_comments {
+	display: block;
+}
+
 .comments .comment:first-child {
    padding-top: 2px;
 }
