--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -1,7 +1,15 @@
 {% extends "group_base.html" %}
 
 {% block maincontent %}
+{% if not notifications %}
 <div class="well" style="text-align: center">
     <p><em>No updates available</em></p>
 </div>
+{% else %}
+    {% for notification in notifications %}
+    <div class="well" style="text-align: center">
+        <p><em>Author: {{ notification.user.first_name }} Msg: {{  notification.content.message }}</em></p>
+    </div>
+    {% endfor %}
+{% endif %}
 {% endblock maincontent %}
