Fixed invite header margin.

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -270,8 +270,8 @@ abbr {
 	margin-left: 5px;
 }
 
-#invites  > li:first-child {
-	margin-left: 5px!important;
+#invites {
+	margin-left: 5px;
 }
 
 .member-avatar {
