--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -63,9 +63,11 @@
 							</ul>
 						</div>
 						{% if is_admin %}
+						{% if invites %}
+							<span class="nav-header">Active Invites</span>	
+						{% endif %}
 						<ul id="invites" class="nav nav-list clearfix">
 							{% if invites %}
-								<span class="nav-header">Active Invites</span>
 								{% for invite in invites %}
 									<li>
 									{% if invite.acceptance == 'P' %}
