--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -34,5 +34,5 @@
 {{ block.super }}
 <script src="{{ STATIC_URL }}js/md5.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/group.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/inbox.js" type="text/javascript"></script>
 {% endblock extrajs %}
