--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -64,7 +64,7 @@
 						</div>
 						{% if is_admin %}
 						{% if invites %}
-							<span class="nav-header">Active Invites</span>	
+							<span class="nav-header">Pending Invites</span>	
 						{% endif %}
 						<ul id="invites" class="nav nav-list clearfix">
 							{% if invites %}
