--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -127,7 +127,7 @@
 					{% endblock maincontent %}
 				</div>
 			</div>
-			<div id="footer" class="pull-right">Whitespace</div>
+			<div id="footer" class="pull-right">Bulletin &copy; 2012 </div>
 		</div>
         </div>
 	</div>
