Fixed awesome font

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,12 @@
         <![endif]-->
 
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome.css" rel="stylesheet" />
-{#        <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-72.css" rel="stylesheet" />#}
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-72.css" rel="stylesheet" />
         <!--[if lt IE 8]>
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/2.0/font-awesome-ie7.css" rel="stylesheet" />
         <![endif]-->
+		
+		
 
         <!-- Custom CSS -->
         <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet" />
